--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "46", email = ""},
 ]
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.12"
 dependencies = [
     "requests>=2.28.0",
     "tomli>=2.0.0",
@@ -14,6 +14,9 @@ dependencies = [
     "uvicorn>=0.24.0",
     "pydantic>=2.0.0",
     "loguru>=0.7.0",
+    "akshare>=1.18.25",
+    "pyahocorasick>=2.3.0",
+    "httpx>=0.27.0",
 ]
 
 [build-system]
