--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,22 +13,28 @@
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.6",
+    "echarts-wordcloud": "^2.1.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "radix-ui": "^1.4.3",
     "react": "^18.3.1",
+    "react-day-picker": "^9.13.2",
     "react-dom": "^18.3.1",
     "sonner": "^2.0.6",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^3.5.0",
     "yet-another-react-lightbox": "^3.24.0"
   },
   "devDependencies": {
