--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,5 +26,9 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["."]
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["*_test.py", "test_*.py"]
+
 [dependency-groups]
 dev = []
