--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,10 @@ dependencies = [
     "pydantic>=2.0.0",
     "loguru>=0.7.0",
     "akshare>=1.18.25",
+    "tushare>=1.4.24",
     "pyahocorasick>=2.3.0",
     "httpx>=0.27.0",
+    "exchange-calendars>=4.11.2",
 ]
 
 [build-system]
